investmentReports card title overflow fixes

--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/_ui/responsive/theme-alpha/css/style-en.css
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/_ui/responsive/theme-alpha/css/style-en.css
@@ -9210,6 +9210,7 @@ select {
 	text-overflow: ellipsis;
 	-webkit-line-clamp: 2;
 }
+.page-economic-investment-reports .news-card .news-card-inner h3{-webkit-line-clamp: 5 !important;}
 
 .news-card .news-card-inner p {
 	font-size: 18px;
